# rasprint

./: .gitignore  README.md  pyproject.toml  receipt-printer.service
.claude/commands/: printer.md
data/: birthdays.txt
src/receipt_printer/: __init__.py  birthdays.py  config.py  ipc.py  main.py  news.py  printer.py  scheduler.py  weather.py
